--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav .fa {
         display: block;
     }
     .nav-links {
-        position: absolute;
+        position: fixed;
         background: #f44336;
         height: 100vh;
         width: 200px;
@@ -503,3 +503,60 @@ h3 {
         font-size: 24px;
     }
 }
+
+
+    /* contact us page */
+
+.location {
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+
+.location iframe {
+    width: 100%;
+}
+
+
+.contact-us {
+    width: 80%;
+    margin: auto;
+}
+
+
+.contact-col {
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;;
+}
+
+.contact-col div .fa {
+    font-size: 28px;
+    color: #f44336;
+    margin: 10px;
+    margin-right: 30px;
+}
+
+.cont {
+    display: flex;
+    align-items: center;
+    margin-left: 135px;
+}
+/* .contact-col div h5 {
+    margin-bottom: 5px;
+} */
+
+.contact-col input, .contact-col textarea {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
