--- a/style.css
+++ b/style.css
@@ -157,6 +157,11 @@ p {
     justify-content: space-between;
 }
 
+.para {
+    text-align: justify;
+    text-justify:inter-word;
+}
+
 .course-col {
     flex-basis: 31%;
     background: #fff3f3;
