--- a/style.css
+++ b/style.css
@@ -176,6 +176,8 @@ p {
     transition: 0.5s;
 }
 
+
+
 h3 {
     text-align: center;
     font-weight: 600;
@@ -229,7 +231,8 @@ h3 {
 }
 
 .para {
-    text-align: center;
+    text-align: justify;
+
 }
 
 .layer h3 {
@@ -395,20 +398,31 @@ h3 {
     text-align: center;
 }
 
+.about-map {
+    /* margin-left: 85px; */
+    margin-top: 40px;
+    text-align: center;
+}
+
+
 .about-us {
     width: 80%;
     margin: auto;
     padding: auto;
-    padding-top: 80px;
-    padding-bottom: 50p;
+    padding-top: 30px;
+    /* padding-bottom: px; */
 }
+
 
 .about-col {
-    flex-basis: 48%;
+    flex-basis: 50%;
     padding: 30px 2px;
+    text-align: justify;
 }
 
-.about-col img {
+.about-col img 
+{
+    margin-left: 40px;
     width: 100%;
 }
 
@@ -451,6 +465,7 @@ h3 {
 .blog-content {
     margin: 50px;
     width: fit-content;
+    text-align: justify;
 }
 
 .blog-left {
